# IRMax

./: Cargo.toml
.cargo/: config.toml
Source/IRMax_Core/: Cargo.toml  build.rs
Source/IRMax_Core/src/: backend.rs  lib.rs  loader.rs
Source/IRMax_Core/src/dsp/: fft_ipp.rs  fft_vdsp.rs  head_ipp.rs  head_vdsp.rs  mod.rs  tail_cuda.rs  tail_metal.rs  tail_vulkan.rs
Source/IRMax_Core/src/engine/: matrix_scheduler.rs  mod.rs  ring_buffer.rs
Source/IRMax_Core/src/framework/: accelerate.rs  cuda.rs  ipp.rs  metal.rs  mod.rs  type.rs  vulkan.rs
Source/IRMax_Core/src/shaders/: fused_convolution.cu  fused_convolution.glsl  fused_convolution.metal
Source/IRMax_Core/src/shaders/lib/: fused_convolution.air  fused_convolution.metallib  fused_convolution.spv  fused_convolution_sm100.ptx  fused_convolution_sm120.ptx  fused_convolution_sm60.ptx  fused_convolution_sm61.ptx  fused_convolution_sm70.ptx  fused_convolution_sm75.ptx  fused_convolution_sm80.ptx  fused_convolution_sm86.ptx  fused_convolution_sm89.ptx  fused_convolution_sm90.ptx
Source/IRMax_Plugin/: Cargo.toml  build.rs
Source/IRMax_Plugin/src/: lib.rs  loader.rs  logger.rs  preset.rs  worker.rs
Source/IRMax_Plugin/src/editor/: mod.rs  slint_host.rs
Source/IRMax_Plugin/src/editor/slint_host/: bridge.rs  common.rs  preset.rs  runtime.rs  spectrum.rs  view.rs
Source/IRMax_Plugin/ui/: main.slint
Source/IRMax_Plugin/ui/globals/: theme.slint
Source/IRMax_Plugin/ui/pages/: home_page.slint
Source/IRMax_Plugin/ui/widgets/: mix_slider.slint  section_title.slint  slot_button.slint  tech_knob.slint
Source/Resources/Presets/: README.txt
Source/Xtask/: Cargo.toml
Source/Xtask/src/: main.rs
