[package]
name = "irmax_core"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
rtrb = "0.3"
rand = "0.8"
libc = "0.2"
rayon = "1.8"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
crossbeam-channel = "0.5"



# Internal
# vkfft-sys = { path = "../../Library/vkfft-sys" } # Removed per architecture decision

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"
accelerate-src = "0.3"
rustfft = "6.1"
realfft = "3.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
cudarc = { version = "0.10", features = ["f16", "driver"] }
rustfft = "6.1"
realfft = "3.3"
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_LibraryLoader"] }
ash = { version = "0.37", features = ["loaded"] }

[build-dependencies]
[target.'cfg(not(target_os = "macos"))'.build-dependencies]
cc = "1.0"

[dev-dependencies]

# Auto-discovery is enabled by default for examples folder.
# We remove explicit stale entries to avoid build errors.
