[package]
name = "IRMax_Plugin"
version.workspace = true
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = ["gui-slint"]
gui-slint = ["dep:nih_plug_slint", "dep:slint", "dep:slint-build"]
production = []

[dependencies]
# Local dependencies from Library
nih_plug = { path = "../../Library/nih-plug", features = ["assert_process_allocs", "standalone"] }
nih_plug_slint = { path = "../../Library/nih-plug-slint", optional = true }
slint = { version = "=1.14.1", default-features = false, features = ["std", "compat-1-2"], optional = true }
nih_log = "0.3.1"

# Crates within the Workspace
irmax_core = { path = "../IRMax_Core" }

# External crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atomic_float = "0.1"
rtrb = "0.3"
lazy_static = "1.4"
log = "0.4"
rfd = "0.17.2"
hound = "3.5.1"
walkdir = "2.5.0"
crossbeam-channel = "0.5.15"
anyhow = "1.0.100"
rustfft = "6.4.1"
arc-swap = "1.8.0"
chrono = "0.4"
parking_lot = "0.12"
dirs = "6.0.0"
rubato = "0.14"
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_System_LibraryLoader"] }
libc = "0.2"

[build-dependencies]
slint-build = { version = "=1.14.1", optional = true }
